# bouncingBalls

./: CMakeLists.txt
data/: 10_balls.txt  10_balls_vy!=0.txt  10_balls_vy=0.txt  2_different_balls.txt  2_same_balls.txt  6_balls.txt  8_balls.txt  Euler-B_spline.txt  Euler-Catmull.txt  Quaternion-B_spline.txt  Quaternion-Catmull.txt  control_points.txt  input.txt
nfd/: CMakeLists.txt
src/: main.cpp
src/articulated/: DrawLinks.cpp  DrawLinks.h  Kinematics.cpp  Kinematics.h  Part.cpp  Part.h
src/matrix/: CoefficientMatrices.cpp  CoefficientMatrices.h  InterpolationHelper.cpp  InterpolationHelper.h  QuaternionConverter.cpp  QuaternionConverter.h  RotationHelper.cpp  RotationHelper.h
src/physicsBased/: Ball.cpp  Ball.h  CollisionDetector.cpp  CollisionDetector.h  DrawObjects.cpp  DrawObjects.h  Geometry.cpp  Geometry.h  Object.cpp  Object.h
src/setup/: PhysicsPrefs.cpp  PhysicsPrefs.h  PhysicsSetupFileLoader.cpp  PhysicsSetupFileLoader.h  Preferences.cpp  Preferences.h  SetupFileLoader.cpp  SetupFileLoader.h  SimpleObjLoader.cpp  SimpleObjLoader.h
src/ui/: StringUtils.cpp  StringUtils.h  UserInputManager.cpp  UserInputManager.h
